# Julia3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmain/: main.c
include/: 3d_file_loaders.h  core.h  defs.h  keyboard.h  shader.h  vertex_array_buffer_object.h
include/classes/: classes.h
include/components/: components.h
julia_src/: classes.jl  components.jl  ecs.jl  private.jl  renderer.jl  sandbox.jl  window.jl
julia_src/private/: core.jl  private.jl
shaders/: default_2Dshape_renderer.frag  default_2Dshape_renderer.vert  default_sprite_shader.frag  default_sprite_shader.vert
src/: Julia3D.jl  core.c  keyboard.c  shader.c  vertex_array_buffer_object.c
src/classes/: mesh.c  texture.c  vertex.c
src/components/: camera.c  mesh_filter.c  sprite_renderer.c  texture.c  transform.c
